force-app/main/default/objects/InstandaApi__c/InstandaApi__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>InstandaApi</label>
</CustomObject>