force-app/main/default/objects/InstandaApi__c/fields/close_date_add_days__c.field-meta.xml
<CustomField>
    <fullName>close_date_add_days__c</fullName>
    <label>close date add days</label>
    <length>255</length>
    <type>Text</type>
</CustomField>