force-app/main/default/objects/InstandaApi__c/fields/last_assigned_index__c.field-meta.xml
<CustomField>
    <fullName>last_assigned_index__c</fullName>
    <label>last assigned index</label>
    <length>255</length>
    <type>Text</type>
</CustomField>