force-app/main/default/objects/InstandaApi__c/fields/Package_Id_1_only_IR35__c.field-meta.xml
<CustomField>
    <fullName>Package_Id_1_only_IR35__c</fullName>
    <label>Package Id 1 (only IR35)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>