force-app/main/default/objects/InstandaApi__c/fields/Package_Id_2__c.field-meta.xml
<CustomField>
    <fullName>Package_Id_2__c</fullName>
    <label>Package Id 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>